k8s/base/networking.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: third-party-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: internal-tls # 与cert-manager创建的Secret一致
      hosts:
        - "api.flyingjack.top"

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: third-party-virtual-service
spec:
  hosts:
    - "api.flyingjack.top"
  gateways:
    - third-party-gateway
  http:
    - match:
        - uri:
            prefix: "/third"
      rewrite:
        uri: " "
      route:
        - destination:
            host: third-party-service # 匹配svc
            subset: v1
            port:
              number: 80
          headers:
            request:
              add:
                X-Forwarded-Prefix: "/third" #
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: third-party-service-rule
spec:
  host: third-party-service # 匹配svc
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      labels:
        version: v1
